# drive-intelligence-platform

./: .gitignore  Dockerfile  README.md  docker-compose.yml  photo_compressor_1.html  pyproject.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
configs/: app.example.yaml  rules.example.yaml
docs/: deployment.md  installation.md
reports/: sample_report.md
src/drive_intelligence_platform/: __init__.py  __main__.py  app.py  schemas.py
src/drive_intelligence_platform/cli/: main.py
src/drive_intelligence_platform/core/: config.py  logging.py
src/drive_intelligence_platform/db/: base.py  session.py
src/drive_intelligence_platform/models/: entities.py  enums.py
src/drive_intelligence_platform/repositories/: base.py  files.py  recommendations.py
src/drive_intelligence_platform/services/: ai.py  audit.py  catalog.py  classifier.py  content_analysis.py  dashboard.py  downloads.py  drive_management.py  duplicates.py  execution.py  file_types.py  largest.py  learning.py  photo_analysis.py  photo_studio.py  rollback.py  rules.py  scanner.py  screenshots.py  search.py  video_analysis.py
src/drive_intelligence_platform/ui/: views.py
tests/integration/: test_catalog_pipeline.py
tests/unit/: test_ai_classifier.py  test_ai_providers.py  test_classifier.py  test_content_analysis.py  test_drive_management.py  test_duplicates.py  test_execution.py  test_scanner.py
